# data-contract-review-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
config/examples/: customer_contract.yaml
docs/: architecture.md  artifacts.md  demo_walkthrough.md  design_principles.md  example_commands.md  portfolio_summary.md  roadmap.md
sample_data/customers/: customers_contract_failures.csv  customers_valid.csv
src/data_contract_review_agent/: cli.py  contract_loader.py  contract_models.py  contract_validation.py  finding_classifier.py  intake.py  llm_client.py  llm_summary.py  output_writers.py  profiling.py  reporting.py  review_mode.py  review_reporting.py  serialization.py  suggested_updates.py  trace_writer.py  validators.py
tests/: test_cli.py  test_contract_loader.py  test_contract_validation.py  test_example_commands.py  test_finding_classifier.py  test_intake.py  test_llm_client.py  test_llm_summary.py  test_output_writers.py  test_profiling.py  test_reporting.py  test_review_cli.py  test_review_mode.py  test_serialization.py  test_suggested_updates.py  test_trace_writer.py  test_validators.py
